--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -36,16 +36,24 @@
     }
   },
   "projects": {
-    "title": "Featured Projects",
+    "title": "Featured Projects ",
     "items": {
       "sofity": {
-        "title": "Sofity",
+        "title": "Sofity ",
         "description": "A modern web application showcasing innovative features and responsive design"
       },
       "portfolio": {
-        "title": "Personal Portfolio",
+        "title": "Personal Portfolio ",
         "description": "A professional portfolio website demonstrating skills and projects"
       }
+    },
+    "technologies": {
+      "react": "React",
+      "javascript": "JavaScript",
+      "css": "CSS3",
+      "responsive": "Responsive Design",
+      "threejs": "Three.js",
+      "framer": "Framer Motion"
     }
   },
   "chat": {
